--- a/package.json
+++ b/package.json
@@ -13,17 +13,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@faker-js/faker": "^9.3.0",
+    "@mui/icons-material": "^6.4.6",
+    "@mui/material": "^6.4.6",
+    "@mui/styled-engine-sc": "^6.4.6",
     "@nextui-org/react": "^2.6.4",
     "@prisma/client": "^6.0.1",
     "framer-motion": "^11.13.1",
+    "moment": "^2.30.1",
     "next": "15.0.3",
     "prisma": "^6.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
